WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210185
Handle errors when grabbing grabbing microphone audio samples from the AudioUnit
https://bugs.webkit.org/show_bug.cgi?id=210185
Summary
Handle errors when grabbing grabbing microphone audio samples from the AudioUnit
youenn fablet
Reported
2020-04-08 05:57:01 PDT
Handle errors when grabbing grabbing microphone audio samples from the AudioUnit
Attachments
Patch
(3.63 KB, patch)
2020-04-08 06:09 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-04-08 06:09:43 PDT
Created
attachment 395797
[details]
Patch
EWS
Comment 2
2020-04-08 08:03:15 PDT
Committed
r259716
: <
https://trac.webkit.org/changeset/259716
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395797
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-04-08 08:04:16 PDT
<
rdar://problem/61455135
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug